--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "hexadog/laravel-theme-installer": false
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
